# project-eeeee

./: README.md
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: .preparing.py.swp  .prepparing.py.swp  index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp
task2/lib/: Makefile  cmake_install.cmake
task3/: CMakeLists.txt
task3/include/: MainLib
task3/src/: CMakeLists.txt
task4/: .coverage  .git.swp
task4/tests/test_01/: test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task5/cmake-with-flask/: Dockerfile
task5/cmake-with-flask/B/: game.py
