cmake_minimum_required(VERSION 3.0)
if (${ARM_BUILD})
	set(CMAKE_SYSYTEM_PROCESSOR aarch64)
	set(CMAKE_C_COMPILER ${TOOLCHAIN}/aarch64-linux-gnu-gcc)
	set(CMAKE_CXX_COMPILER ${TOOLCHAIN}/aarch64-linux-gnu-g++)
endif()
project(SimpleLibrary)
include_directories(include)


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SimpleLibrary_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SimpleLibrary_SOURCE_DIR}/lib)
add_subdirectory(src)
add_executable(Main main.cpp)
add_executable(MainLib main_lib.cpp)
set_target_properties(MainLib PROPERTIES INSTALL_RPATH ${CMALE_INSTALL_PREFIX}/lib)
target_link_libraries(MainLib buffer)
install(DIRECTORY ${SimpleLibrary_SOURCE_DIR}/include DESTINATION ${CMAKE_INSTALL_PREFIX})
install(TARGETS Main RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
install(TARGETS MainLib PUBLIC_HEADER RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
